2019-04-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pdb.c (WritePDBImage): Fix SourceForge issue #605
	"heap-buffer-overflow in function WritePDBImage of coders/pdb.c".

	* magick/widget.c: Add many const declarations.

	* magick/display.c: Incorporate and eliminate display.h. Add many
	const declarations.

	* magick/animate.c: Incorporate and eliminate animate.h. Add many
	const declarations.

2019-04-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/wmf.c (ReadWMFImage): Reject WMF files with an empty
	bounding box.  Fixes SourceForge issue #606 "Division by Zero in
	coders/wmf.c".

2019-04-07  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* magick/nt_base.c Fix a problem of finding ghostscript fonts.
	Variable "font_dir" was useless and thus removed. No need to copy
	text multiple times.  Use const char gs_font_dir[] instead of
	pointer.

2019-04-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xwd.c (ReadXWDImage): Perform more header validations and
	a file size validation in order to reject files with bogus
	headers.
	(WriteXWDImage): Fix SourceForge issue #599
	"heap_buffer_overflow_WRITE in function WriteXWDImage of
	coders/xwd.c".

2019-04-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/svg.c (SVGStartElement): Fix stack buffer overflow while
	parsing quoted font family value.  Fixes SourceForge issue #600
	"stack-buffer-overflow in function SVGStartElement of
	coders/svg.c".

	* coders/miff.c (ReadMIFFImage): Detect end of file while reading
	RLE packets.  Fixes SourceForge issue #598 "heap-buffer-overflow
	in function ReadMIFFImage of coders/miff.c".

2019-04-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xwd.c (ReadXWDImage): Fix heap buffer overflow while
	reading DirectClass XWD file.  Fixes SourceForge issue #597
	"heap-buffer-overflow in function ReadXWDImage of coders/xwd.c".

2019-04-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
