@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020190410"
-#define public MagickPackageReleaseDate "snapshot-20190410"
+#define public MagickPackageVersionAddendum ".020190411"
+#define public MagickPackageReleaseDate "snapshot-20190411"
